# aegis

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo_proactive_monitoring.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_jira_rag_agent_test.py  simulate_activity.py  test_feedback_workflow.py  test_jira_chargebee_agent.py
.github/workflows/: ci.yml
aegis/: __init__.py  config.py  runner.py
aegis/agents/: __init__.py  base.py  feedback_agent.py  feedback_mixin.py  growth.py  integration.py  jira_chargebee_agent.py  onboarding.py  onboarding_agent.py  orchestrator_agent.py  proactive.py  query_resolution_agent.py  supervisor.py
aegis/cli/: __init__.py  run_supervisor.py
aegis/hil/: __init__.py  api.py  dashboard.py  dashboard_backup.py
aegis/monitors/: __init__.py  proactive_monitor.py
aegis/protocols/: __init__.py  a2a_protocol.py
aegis/services/: __init__.py  session_service.py
aegis/state/: __init__.py  state_manager.py
aegis/tools/: __init__.py  chargebee_actions.py  chargebee_client.py  chargebee_ops_mcp_tool.py  chargebee_rag_tool.py  customer_context.py  diagnostic_actions.py  jira_mcp.py  monitoring_mocks.py  perks_engine.py  sandbox_api_tool.py  vector_db_client.py  zendesk_client.py
aegis/transports/: __init__.py  in_memory_transport.py  redis_adapter.py
docs/: hil_api_schema.yaml  messages.md  simulator_guide.md
tests/: test_imports.py  test_message_schema.py
